--- a/index.html
+++ b/index.html
@@ -24,12 +24,56 @@
                 </ul>
             </nav>
 
-           <div class="header_icons">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
-           </div>
+            <div class="header_icons">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
+            </div>
 
         </header>
+<!-- main -->
+        <main>
+            <h1 class="Main_title">Contact Us</h1>
+
+
+            <form>
+
+                  <div class="form_div1">
+                    <label for="Name">First Name</label>
+                    <input type="text" id="Name" name="სახელი">
+
+                    <label for="Lastname">Last Name</label>
+                    <input type="text" id="Lastname" name="გვარი">
+                  </div>
+
+                    <div class="form_div2">
+                        <label for="Age">Age</label>
+                    <input type="number" id="Age" name="ასაკი">
+
+                    <label for="Email">Email Adress</label>
+                    <input type="email" id="Email" name="email">
+                    </div>
+
+                <label for="F">Full Time</label>
+                <input type="radio" id="F" name="f">
+                
+                <label for="P">Part-Time</label>
+                <input type="radio" id="P" name="p">
+
+                <label for="R">Remote</label>
+                <input type="radio" id="R" name="p">
+            </form>
+        </main>
+        <!-- footer -->
+        <footer>
+            <img src="image/footer_logo.svg" alt="logo">
+
+            <div class="footer_icons">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </footer>
     </div>
 </body>
 
