--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <!-- header -->
         <header>
-            <img src="image/header_logo.svg" alt="logo">
+            <a href="index.html"><img src="image/header_logo.svg" alt="logo"></a>
             <nav>
                 <ul>
                     <li>Home</li>
